--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "formik": "^2.4.2",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
